Todos los audios funcionan

--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div id="pamostraranimals" class="card mx-auto justify-content-center align-items-center" style="display: flex; justify-content:center;">
-        <button class="paramostraranimals" onclick="mostrarContenido()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
+        <button class="paramostraranimals" onclick="mostrarContenidoAnimals()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
     </div>
 
     <div id="contenidoanimals" style="display:none;">
@@ -33,24 +33,28 @@
             <div class="row">
                 <div id="dog" class="card">
                     <img src="./resources/animals/dog.png" />
-                    <h3 class="hover-text" id="doggy">Perro<br />Dog<br /></h3>
-                    <audio id="audio" class="SoundOnHover" src="https://css-tricks.com/examples/SoundOnHover/audio/beep.mp3" preload="auto" autoplay></audio>
+                    <h3 class="hover-text">Perro<br />Dog<br /></h3>
+                    <audio id="audioperro" class="SoundOnHover" src="resources/sounds/perro dog.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="shark" class="card">
                     <img src="./resources/animals/shark.png"/>
-                    <h3 class="hover-text card-text" id="sharky">Tiburón<br />Shark<br /></h3>
+                    <h3 class="hover-text card-text">Tiburón<br />Shark<br /></h3>
+                    <audio id="audiosharky" class="SoundOnHover" src="resources/sounds/tiburón shark.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="lion" class="card">
                     <img src="./resources/animals/lion.png" />
-                    <h3 class="hover-text card-text" id="leoncito">León<br />Lion<br /></h3>
+                    <h3 class="hover-text card-text">León<br />Lion<br /></h3>
+                    <audio id="audiolion" class="SoundOnHover" src="resources/sounds/león lion.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="sheep" class="card">
                     <img src="./resources/animals/sheep.png" />
-                    <h3 class="hover-text card-text" id="beeee">Oveja<br />Sheep<br /></h3>
+                    <h3 class="hover-text card-text">Oveja<br />Sheep<br /></h3>
+                    <audio id="audiooveja" class="SoundOnHover" src="resources/sounds/oveja sheep.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="elephant" class="card">
                     <img src="./resources/animals/elephant.png" />
-                    <h3 class="hover-text card-text" id="elefantillo">Elefante<br />Elephant<br /></h3>
+                    <h3 class="hover-text card-text">Elefante<br />Elephant<br /></h3>
+                    <audio id="audioelefante" class="SoundOnHover" src="resources/sounds/elefante elephant .aac" preload="auto" autoplay></audio>
                 </div>
             </div>
         </div>
