--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -32,7 +32,6 @@
         <div id="PaletaDiv" class="mx-auto d-block">
             <div class="green">
                 <h3 class="hover-text">Verde<br />Green<br /></h3>
-                <audio src="SnapSave.io - 지민 (Jimin) 'Set Me Free Pt.2' Official MV (128 kbps).mp3"></audio>
             </div>
             <div class="red">
                 <h3 class="hover-text">Rojo<br />Red<br /></h3>
@@ -48,10 +47,25 @@
             </div>
         </div>
 
+        <button id="audios" class="xs-auto d-block ">
+            <img src="resources/iconodealtavozsorry.jpg" alt="Altavoz" width="30">
+        </button>
+
         <button id="changeColorsButton" class="mx-auto d-block">
             <label>¡M&aacute;s colores!</label>
         </button>
     </div>
+
+    <audio id="audiogreen" class="SoundOnHover" src="resources/sounds/verde green.aac" preload="auto" autoplay></audio>
+    <audio id="audiored" class="SoundOnHover" src="resources/sounds/rojo red.aac" preload="auto" autoplay></audio>
+    <audio id="audioblue" class="SoundOnHover" src="resources/sounds/azul blue.aac" preload="auto" autoplay></audio>
+    <audio id="audioyellow" class="SoundOnHover" src="resources/sounds/amarillo yellow.aac" preload="auto" autoplay></audio>
+    <audio id="audiowhite" class="SoundOnHover" src="resources/sounds/blanco white.aac" preload="auto" autoplay></audio>
+    <audio id="audiopurple" class="SoundOnHover" src="resources/sounds/morado purple.aac" preload="auto" autoplay></audio>
+    <audio id="audioaqua" class="SoundOnHover" src="resources/sounds/aqua aqua.aac" preload="auto" autoplay></audio>
+    <audio id="audioblack" class="SoundOnHover" src="resources/sounds/negro black.aac" preload="auto" autoplay></audio>
+    <audio id="audioorange" class="SoundOnHover" src="resources/sounds/naranja orange.aac" preload="auto" autoplay></audio>
+    <audio id="audiogray" class="SoundOnHover" src="resources/sounds/gris gray.aac" preload="auto" autoplay></audio>
 
     <script src="js/colorStudy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
