--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div id="pamostrarnumber" class="card mx-auto justify-content-center align-items-center" style="display: flex; justify-content:center;">
-        <button class="paramostrarnumber" onclick="mostrarContenido()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
+        <button class="paramostrarnumber" onclick="mostrarContenidoNumber()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
     </div>
 
     <div id="contenidonumber" style="display:none;">
@@ -35,30 +35,37 @@
                 <div id="n1" class="card">
                     <img src="./resources/numbers/1.png" />
                     <h3 class="hover-text">Uno<br />One<br /></h3>
+                    <audio id="audiouno" class="SoundOnHover" src="resources/sounds/uno one.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n2" class="card">
                     <img src="./resources/numbers/2.png" />
                     <h3 class="hover-text card-text">Dos<br />Two<br /></h3>
+                    <audio id="audiodos" class="SoundOnHover" src="resources/sounds/dos two.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n3" class="card">
                     <img src="./resources/numbers/3.png" />
                     <h3 class="hover-text card-text">Tres<br />Three<br /></h3>
+                    <audio id="audiotres" class="SoundOnHover" src="resources/sounds/tres three.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n4" class="card">
                     <img src="./resources/numbers/4.png" />
                     <h3 class="hover-text card-text">Cuatro<br />Four<br /></h3>
+                    <audio id="audiocuatro" class="SoundOnHover" src="resources/sounds/cuatro four.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n5" class="card">
                     <img src="./resources/numbers/5.png" />
                     <h3 class="hover-text card-text" id="cinco">Cinco<br />Five<br /></h3>
+                    <audio id="audiocinco" class="SoundOnHover" src="resources/sounds/cinco five.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n6" class="card">
                     <img src="./resources/numbers/6.png" />
                     <h3 class="hover-text card-text">Seis<br />Six<br /></h3>
+                    <audio id="audioseis" class="SoundOnHover" src="resources/sounds/seis six.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n10" class="card">
                     <img src="./resources/numbers/10.png" />
                     <h3 class="hover-text card-text">Diez<br />Ten<br /></h3>
+                    <audio id="audiodiez" class="SoundOnHover" src="resources/sounds/diez ten.aac" preload="auto" autoplay></audio>
                 </div>
             </div>
         </div>
