--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
           <a href="mainmenu.html">
-              <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button"><img src="./resources/arrow.png" style="width: 100%;"></button>
+              <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button" aria-label="Boton atras"><img src="./resources/arrow.png" style="width: 100%;"></button>
           </a>
       </div>
     </nav>
@@ -41,7 +41,7 @@
       <div class="row pt-2">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonColores" onclick="window.location.href = 'practiceactivity.html';">
+            <button class="btn-custom botones buttonColores" aria-label="Botón colores" onclick="window.location.href = 'practiceactivity.html';">
               <svg class="svgColores svgBoton"></svg>              
             </button>
           </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col col-custom">
           <div>
-            <button class="btn-custom botones buttonAnimales" onclick="window.location.href = 'practiceactivity2.html';">
+            <button class="btn-custom botones buttonAnimales" aria-label="Botón animales" onclick="window.location.href = 'practiceactivity2.html';">
               <svg class="svgAnimales svgBoton"></svg>              
             </button>
           </div>
@@ -67,7 +67,7 @@
       <div class="row mt-n1">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonNumeros" onclick="window.location.href = 'practiceactivity3.html';">
+            <button class="btn-custom botones buttonNumeros" aria-label="Botón números" onclick="window.location.href = 'practiceactivity3.html';">
               <svg class="svgNumeros svgBoton"></svg>              
             </button>
           </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="col">
           <div>
-            <svg class="svgSoonMore svgBoton"></svg>
+            <svg class="svgSoonMore svgBoton" aria-label="Pronto más juegos"></svg>
           </div>  
         </div>
       </div> 
@@ -91,13 +91,13 @@
     <!--Final de la tabla-->
 
       <div class="bubble izq">
-        <img src="./resources/bubbles/bubbleAVerCuantoColores.png" id="bubbleColores" style="display:none">
-        <img src="./resources/bubbles/bubbleAVerCuantoAnimales.png" id="bubbleAnimales" style="display:none">
-        <img src="./resources/bubbles/bubbleAVerCuantoNumeros.png" id="bubbleNumeros" style="display:none">
-        <img src="./resources/bubbles/bubbleBienvenidaPracticeMode.png" id="bubbleBienvenida" style="display:block">
+        <img src="./resources/bubbles/bubbleAVerCuantoColores.png" id="bubbleColores" style="display:none" aria-label="A ver cuantos sabes de colores">
+        <img src="./resources/bubbles/bubbleAVerCuantoAnimales.png" id="bubbleAnimales" style="display:none" aria-label="¿Cuántos animales puedes nombrar?">
+        <img src="./resources/bubbles/bubbleAVerCuantoNumeros.png" id="bubbleNumeros" style="display:none" aria-label="¿Qué tal se te da contar en inglés?">
+        <img src="./resources/bubbles/bubbleBienvenidaPracticeMode.png" id="bubbleBienvenida" style="display:block" aria-label="Elige un tema que quieras practicar">
       </div>
      <div class="gatito">
-      <img src="./resources/solo-gatito.png" id="gatito">
+      <img src="./resources/solo-gatito.png" id="gatito" aria-label="Gato Umberto">
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
