Tabindexs en study mode

--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -26,23 +26,23 @@
         <button class="paramostrarcolors" onclick="mostrarContenidoColor()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
     </div>
 
-    <div id="contenidocolors" style="display:none;">
+    <div id="contenidocolors" style="display:none;" tabindex="0">
         <h1>¡Aprende los colores en inglés!</h1>
         <h4>Pasa el cursor por los colores para verlos.</h4>
-        <div id="PaletaDiv" class="mx-auto d-block">
-            <div class="green">
-                <h3 class="hover-text">Verde<br />Green<br /></h3>
+        <div id="PaletaDiv" class="mx-auto d-block" tabindex="0">
+            <div class="green" tabindex="0">
+                <h3 class="hover-text" >Verde<br />Green<br /></h3>
             </div>
-            <div class="red">
+            <div class="red" tabindex="0">
                 <h3 class="hover-text">Rojo<br />Red<br /></h3>
             </div>
-            <div class="blue">
+            <div class="blue" tabindex="0">
                 <h3 class="hover-text">Azul<br />Blue<br /></h3>
             </div>
-            <div class="yellow">
+            <div class="yellow"tabindex="0">
                 <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
             </div>
-            <div class="white">
+            <div class="white" tabindex="0">
                 <h3 class="hover-text">Blanco<br />White<br /></h3>
             </div>
         </div>
