--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -26,33 +26,33 @@
         <button class="paramostraranimals" onclick="mostrarContenidoAnimals()">¡Vamos a aprender! <br> Pulsa aquí para empezar </button>
     </div>
 
-    <div id="contenidoanimals" style="display:none;">
+    <div id="contenidoanimals" style="display:none;" tabindex="0">
         <h1>¡Aprende los animales en ingl&eacute;s!</h1>
         <h4>Pasa el cursor por los animales para ver sus nombres.</h4>
         <div id="Animals" class="mx-auto d-block container-fluid">
             <div class="row">
-                <div id="dog" class="card">
-                    <img src="./resources/animals/dog.png" />
+                <div id="dog" class="card" tabindex="0">
+                    <img src="./resources/animals/dog.png"/>
                     <h3 class="hover-text">Perro<br />Dog<br /></h3>
                     <audio id="audioperro" class="SoundOnHover" src="resources/sounds/perro dog.aac" preload="auto" autoplay></audio>
                 </div>
-                <div id="shark" class="card">
+                <div id="shark" class="card" tabindex="0">
                     <img src="./resources/animals/shark.png"/>
                     <h3 class="hover-text card-text">Tiburón<br />Shark<br /></h3>
                     <audio id="audiosharky" class="SoundOnHover" src="resources/sounds/tiburón shark.aac" preload="auto" autoplay></audio>
                 </div>
-                <div id="lion" class="card">
-                    <img src="./resources/animals/lion.png" />
+                <div id="lion" class="card"  tabindex="0">
+                    <img src="./resources/animals/lion.png"/>
                     <h3 class="hover-text card-text">León<br />Lion<br /></h3>
                     <audio id="audiolion" class="SoundOnHover" src="resources/sounds/león lion.aac" preload="auto" autoplay></audio>
                 </div>
-                <div id="sheep" class="card">
-                    <img src="./resources/animals/sheep.png" />
+                <div id="sheep" class="card" tabindex="0">
+                    <img src="./resources/animals/sheep.png"/>
                     <h3 class="hover-text card-text">Oveja<br />Sheep<br /></h3>
                     <audio id="audiooveja" class="SoundOnHover" src="resources/sounds/oveja sheep.aac" preload="auto" autoplay></audio>
                 </div>
-                <div id="elephant" class="card">
-                    <img src="./resources/animals/elephant.png" />
+                <div id="elephant" class="card"  tabindex="0">
+                    <img src="./resources/animals/elephant.png"/>
                     <h3 class="hover-text card-text">Elefante<br />Elephant<br /></h3>
                     <audio id="audioelefante" class="SoundOnHover" src="resources/sounds/elefante elephant .aac" preload="auto" autoplay></audio>
                 </div>
