--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -31,19 +31,19 @@
         <h4>Pasa el cursor por los colores para verlos.</h4>
         <div id="PaletaDiv" class="mx-auto d-block" tabindex="0">
             <div class="green" tabindex="0">
-                <h3 class="hover-text" >Verde<br />Green<br /></h3>
+                <h3 class="hover-text" aria-hidden="true">Verde<br />Green<br /></h3>
             </div>
             <div class="red" tabindex="0">
-                <h3 class="hover-text">Rojo<br />Red<br /></h3>
+                <h3 class="hover-text" aria-hidden="true">Rojo<br />Red<br /></h3>
             </div>
             <div class="blue" tabindex="0">
-                <h3 class="hover-text">Azul<br />Blue<br /></h3>
+                <h3 class="hover-text" aria-hidden="true">Azul<br />Blue<br /></h3>
             </div>
             <div class="yellow"tabindex="0">
-                <h3 class="hover-text">Amarillo<br />Yellow<br /></h3>
+                <h3 class="hover-text" aria-hidden="true">Amarillo<br />Yellow<br /></h3>
             </div>
             <div class="white" tabindex="0">
-                <h3 class="hover-text">Blanco<br />White<br /></h3>
+                <h3 class="hover-text" aria-hidden="true">Blanco<br />White<br /></h3>
             </div>
         </div>
 
