--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -34,37 +34,37 @@
             <div class="row">
                 <div id="n1" class="card" tabindex="0">
                     <img src="./resources/numbers/1.png"/>
-                    <h3 class="hover-text" tabindex="0">Uno<br />One<br /></h3>
+                    <h3 class="hover-text" aria-hidden="true">Uno<br />One<br /></h3>
                     <audio id="audiouno" class="SoundOnHover" src="resources/sounds/uno one.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n2" class="card" tabindex="0">
                     <img src="./resources/numbers/2.png"/>
-                    <h3 class="hover-text card-text">Dos<br />Two<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Dos<br />Two<br /></h3>
                     <audio id="audiodos" class="SoundOnHover" src="resources/sounds/dos two.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n3" class="card" tabindex="0">
                     <img src="./resources/numbers/3.png"/>
-                    <h3 class="hover-text card-text">Tres<br />Three<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Tres<br />Three<br /></h3>
                     <audio id="audiotres" class="SoundOnHover" src="resources/sounds/tres three.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n4" class="card" tabindex="0">
                     <img src="./resources/numbers/4.png"/>
-                    <h3 class="hover-text card-text">Cuatro<br />Four<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Cuatro<br />Four<br /></h3>
                     <audio id="audiocuatro" class="SoundOnHover" src="resources/sounds/cuatro four.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n5" class="card" tabindex="0">
                     <img src="./resources/numbers/5.png"/>
-                    <h3 class="hover-text card-text" id="cinco">Cinco<br />Five<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Cinco<br />Five<br /></h3>
                     <audio id="audiocinco" class="SoundOnHover" src="resources/sounds/cinco five.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n6" class="card" tabindex="0">
                     <img src="./resources/numbers/6.png"/>
-                    <h3 class="hover-text card-text">Seis<br />Six<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Seis<br />Six<br /></h3>
                     <audio id="audioseis" class="SoundOnHover" src="resources/sounds/seis six.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="n10" class="card" tabindex="0">
                     <img src="./resources/numbers/10.png"/>
-                    <h3 class="hover-text card-text">Diez<br />Ten<br /></h3>
+                    <h3 class="hover-text card-text" aria-hidden="true">Diez<br />Ten<br /></h3>
                     <audio id="audiodiez" class="SoundOnHover" src="resources/sounds/diez ten.aac" preload="auto" autoplay></audio>
                 </div>
             </div>
