--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <title>MIAU</title>
     <style type="text/css">
-        @import url("/MIAU/ClientApp/styles/loginStyle.css");
+        @import url("styles/loginStyle.css");
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+    crossorigin="anonymous" />
 </head>
 
 <body>
@@ -22,8 +26,11 @@
     <div class="bubble der">
         <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja">
     </div>
-    <img src="../../MIAU/Umberto.png" class="Umberto" alt="Umberto" height="200px" width="120px">
+    <img src="resources/Umberto.png" class="Umberto" alt="Umberto" height="200px" width="120px">
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
