--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="card p-3 botonTienda" id="tienda">
-                        <a href="customizeUmberto.html" class="btn btn-primary">Personaliza a Umberto</a>
+                        <a href="customizeUmberto.html" class="btn btn-primary disabled" disabled aria-disabled="true">Personaliza a Umberto</a>
                 </div>
             </div>
         </div>
