--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -30,19 +30,19 @@
             <div class="col-1">
                 <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                     onclick="window.location.href = 'index.html';" aria-label="Botón de retorno a la página de inicio">
-                    <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" aria-disabled="false"/>
+                    <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px"/>
                 </button>
             </div>
         </nav>
     
-        <div class="container" aria-label="página de inicio de sesión" aria-disabled="true">
-            <div class="row justify-content-center mt-5" aria-disabled="true">
-                <div class="col-md-5" aria-disabled="true">
+        <div class="container" aria-label="página de inicio de sesión">
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-5">
                     <div id="tarjeta" class="card text-center" aria-label="Panel de inicio">
-                        <div id="cabecera" class="card-header" aria-disabled="true">
+                        <div id="cabecera" class="card-header" >
                             <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100"/>
                         </div>
-                        <div class="card-body" aria-disabled="true">
+                        <div class="card-body">
                             <fieldset id="cuadrito1">
                                 <h3> ¿Cómo te llamas? </h3>
                             </fieldset>
