accessibility fixed on main menu and

--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
           <a href="mainmenu.html">
-              <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button" aria-label="Boton atras"><img src="./resources/arrow.png" style="width: 100%;"></button>
+              <button style="background: transparent; outline: none; border: 0; width: 60px; "type="button"  aria-label="Volver atrás"><img src="./resources/arrow.png" style="width: 100%;"></button>
           </a>
       </div>
     </nav>
@@ -41,7 +41,7 @@
       <div class="row pt-2">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonColores" aria-label="Botón colores" onclick="window.location.href = 'practiceactivity.html';">
+            <button class="btn-custom botones buttonColores" aria-label="Botón colores" alt="Botón tema colores" onclick="window.location.href = 'practiceactivity.html';">
               <svg class="svgColores svgBoton"></svg>              
             </button>
           </div>
@@ -57,7 +57,7 @@
         </div>
         <div class="col col-custom">
           <div>
-            <button class="btn-custom botones buttonAnimales" aria-label="Botón animales" onclick="window.location.href = 'practiceactivity2.html';">
+            <button class="btn-custom botones buttonAnimales" aria-label="Botón tema animales" alt="Botón tema animales" onclick="window.location.href = 'practiceactivity2.html';">
               <svg class="svgAnimales svgBoton"></svg>              
             </button>
           </div>
@@ -67,7 +67,7 @@
       <div class="row mt-n1">
         <div class="col col-custom"> 
           <div>
-            <button class="btn-custom botones buttonNumeros" aria-label="Botón números" onclick="window.location.href = 'practiceactivity3.html';">
+            <button class="btn-custom botones buttonNumeros" aria-label="Botón tema numeros" alt="Botón tema animales" onclick="window.location.href = 'practiceactivity3.html';">
               <svg class="svgNumeros svgBoton"></svg>              
             </button>
           </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="col">
           <div>
-            <svg class="svgSoonMore svgBoton" aria-label="Pronto más juegos"></svg>
+            <svg class="svgSoonMore svgBoton" aria-label="Pronto añadiremos más"></svg>
           </div>  
         </div>
       </div> 
