--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Menú principal</title>
     <style type="text/css">
         @import url("styles/mainMenu.css");
         @import url("styles/commonStyles.css");
@@ -27,10 +27,10 @@
             <img src="./resources/solo-gatito.png" class="gato" id="gatitoMenu" alt="logo">
         </div>
         <div class="bubble2">
-            <img src="./resources/bubbles/bubbleMenuBotones.png" id="bubbleMenu" style="display: block;">
-            <img src="./resources/bubbles/bubbleMenuModoPractica.png" id="bubblePractica" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" id="bubbleEstudio" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuTienda.png" id="bubbleTienda" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuBotones.png" aria-label="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función." alt="bocadillo de diálogo del menu" id="bubbleMenu" style="display: block;">
+            <img src="./resources/bubbles/bubbleMenuModoPractica.png" alt="bocadillo de diálogo del modo práctica" aria-label="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora" id="bubblePractica" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" alt="bocadillo de diálogo del modo estudio" aria-label="Aqui podrás aprender nuevas palabras" id="bubbleEstudio" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuTienda.png" alt="bocadillo de diálogo del modo tienda" id="bubbleTienda" aria-label="Por ahora la tienda está deshabilitada" style="display:none">
           </div>
         <div class="bg-image container-fluid" id="background"
             style="background-image: url('./resources/Background.png'); height: 100vh;"
