--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Modo estudio animales</title>
     <style type="text/css">
         @import url("./styles/studyActivities/studyAnimals.css");
     </style>
@@ -32,28 +32,28 @@
         <div id="Animals" class="mx-auto d-block container-fluid">
             <div class="row">
                 <div id="dog" class="card" tabindex="0" aria-hidden="true">
-                    <img src="./resources/animals/dog.png" aria-hidden="true"/>
-                    <h3 class="hover-text" aria-hidden="true">Perro<br />Dog<br /></h3>
+                    <img src="./resources/animals/dog.png" aria-hidden="true" alt="perro"/>
+                    <p class="hover-text" aria-hidden="true">Perro<br />Dog<br /></p>
                     <audio id="audioperro" class="SoundOnHover" src="resources/sounds/perro dog.aac" preload="auto" autoplay tabindex="0" aria-hidden="true"></audio>
                 </div>
                 <div id="shark" class="card" tabindex="0">
                     <img src="./resources/animals/shark.png"/>
-                    <h3 class="hover-text card-text" aria-hidden="true">Tiburón<br />Shark<br /></h3>
+                    <p class="hover-text card-text" aria-hidden="true" alt="tiburón">Tiburón<br />Shark<br /></p>
                     <audio id="audiosharky" class="SoundOnHover" src="resources/sounds/tiburón shark.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="lion" class="card"  tabindex="0">
                     <img src="./resources/animals/lion.png"/>
-                    <h3 class="hover-text card-text" aria-hidden="true">León<br />Lion<br /></h3>
+                    <p class="hover-text card-text" aria-hidden="true" alt="león">León<br />Lion<br /></p>
                     <audio id="audiolion" class="SoundOnHover" src="resources/sounds/león lion.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="sheep" class="card" tabindex="0">
                     <img src="./resources/animals/sheep.png"/>
-                    <h3 class="hover-text card-text" aria-hidden="true">Oveja<br />Sheep<br /></h3>
+                    <p class="hover-text card-text" aria-hidden="true" alt="oveja">Oveja<br />Sheep<br /></p>
                     <audio id="audiooveja" class="SoundOnHover" src="resources/sounds/oveja sheep.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="elephant" class="card"  tabindex="0">
                     <img src="./resources/animals/elephant.png"/>
-                    <h3 class="hover-text card-text" aria-hidden="true">Elefante<br />Elephant<br /></h3>
+                    <p class="hover-text card-text" aria-hidden="true" alt="elefante">Elefante<br />Elephant<br /></p>
                     <audio id="audioelefante" class="SoundOnHover" src="resources/sounds/elefante elephant .aac" preload="auto" autoplay></audio>
                 </div>
             </div>
