fixed some alts form study mode

--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -32,28 +32,28 @@
         <div id="Animals" class="mx-auto d-block container-fluid">
             <div class="row">
                 <div id="dog" class="card" tabindex="0" aria-hidden="true">
-                    <img src="./resources/animals/dog.png" aria-hidden="true" alt="perro"/>
+                    <img src="./resources/animals/dog.png" aria-hidden="true" alt="imagen de  un perro"/>
                     <p class="hover-text" aria-hidden="true">Perro<br />Dog<br /></p>
                     <audio id="audioperro" class="SoundOnHover" src="resources/sounds/perro dog.aac" preload="auto" autoplay tabindex="0" aria-hidden="true"></audio>
                 </div>
                 <div id="shark" class="card" tabindex="0">
                     <img src="./resources/animals/shark.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="tiburón">Tiburón<br />Shark<br /></p>
+                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un tiburón">Tiburón<br />Shark<br /></p>
                     <audio id="audiosharky" class="SoundOnHover" src="resources/sounds/tiburón shark.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="lion" class="card"  tabindex="0">
                     <img src="./resources/animals/lion.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="león">León<br />Lion<br /></p>
+                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un león">León<br />Lion<br /></p>
                     <audio id="audiolion" class="SoundOnHover" src="resources/sounds/león lion.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="sheep" class="card" tabindex="0">
                     <img src="./resources/animals/sheep.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="oveja">Oveja<br />Sheep<br /></p>
+                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de una oveja">Oveja<br />Sheep<br /></p>
                     <audio id="audiooveja" class="SoundOnHover" src="resources/sounds/oveja sheep.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="elephant" class="card"  tabindex="0">
                     <img src="./resources/animals/elephant.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="elefante">Elefante<br />Elephant<br /></p>
+                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un elefante">Elefante<br />Elephant<br /></p>
                     <audio id="audioelefante" class="SoundOnHover" src="resources/sounds/elefante elephant .aac" preload="auto" autoplay></audio>
                 </div>
             </div>
