--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -52,16 +52,16 @@
         </button>
     </div>
 
-    <audio id="audiogreen" class="SoundOnHover" src="resources/sounds/verde green.aac" preload="auto" autoplay></audio>
-    <audio id="audiored" class="SoundOnHover" src="resources/sounds/rojo red.aac" preload="auto" autoplay></audio>
-    <audio id="audioblue" class="SoundOnHover" src="resources/sounds/azul blue.aac" preload="auto" autoplay></audio>
-    <audio id="audioyellow" class="SoundOnHover" src="resources/sounds/amarillo yellow.aac" preload="auto" autoplay></audio>
-    <audio id="audiowhite" class="SoundOnHover" src="resources/sounds/blanco white.aac" preload="auto" autoplay></audio>
-    <audio id="audiopurple" class="SoundOnHover" src="resources/sounds/morado purple.aac" preload="auto" autoplay></audio>
-    <audio id="audioaqua" class="SoundOnHover" src="resources/sounds/aqua aqua.aac" preload="auto" autoplay></audio>
-    <audio id="audioblack" class="SoundOnHover" src="resources/sounds/negro black.aac" preload="auto" autoplay></audio>
-    <audio id="audioorange" class="SoundOnHover" src="resources/sounds/naranja orange.aac" preload="auto" autoplay></audio>
-    <audio id="audiogray" class="SoundOnHover" src="resources/sounds/gris gray.aac" preload="auto" autoplay></audio>
+    <audio id="audiogreen" class="SoundOnHover" src="resources/sounds/verde green.aac" preload="auto" ></audio>
+    <audio id="audiored" class="SoundOnHover" src="resources/sounds/rojo red.aac" preload="auto" ></audio>
+    <audio id="audioblue" class="SoundOnHover" src="resources/sounds/azul blue.aac" preload="auto" ></audio>
+    <audio id="audioyellow" class="SoundOnHover" src="resources/sounds/amarillo yellow.aac" preload="auto" ></audio>
+    <audio id="audiowhite" class="SoundOnHover" src="resources/sounds/blanco white.aac" preload="auto" ></audio>
+    <audio id="audiopurple" class="SoundOnHover" src="resources/sounds/morado purple.aac" preload="auto" ></audio>
+    <audio id="audioaqua" class="SoundOnHover" src="resources/sounds/aqua aqua.aac" preload="auto" ></audio>
+    <audio id="audioblack" class="SoundOnHover" src="resources/sounds/negro black.aac" preload="auto" ></audio>
+    <audio id="audioorange" class="SoundOnHover" src="resources/sounds/naranja orange.aac" preload="auto" ></audio>
+    <audio id="audiogray" class="SoundOnHover" src="resources/sounds/gris gray.aac" preload="auto" ></audio>
 
     <script src="js/colorStudy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
