--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -8,6 +8,7 @@
         @import url("styles/mainMenu.css");
         @import url("styles/commonStyles.css");
     </style>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
