--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -37,23 +37,23 @@
                     <audio id="audioperro" class="SoundOnHover" src="resources/sounds/perro dog.aac" preload="auto" autoplay tabindex="0" aria-hidden="true"></audio>
                 </div>
                 <div id="shark" class="card" tabindex="0">
-                    <img src="./resources/animals/shark.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un tiburón">Tiburón<br />Shark<br /></p>
+                    <img src="./resources/animals/shark.png" alt="imagen de un tiburón"/>
+                    <p class="hover-text card-text" aria-hidden="true">Tiburón<br />Shark<br /></p>
                     <audio id="audiosharky" class="SoundOnHover" src="resources/sounds/tiburón shark.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="lion" class="card"  tabindex="0">
-                    <img src="./resources/animals/lion.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un león">León<br />Lion<br /></p>
+                    <img src="./resources/animals/lion.png" alt="imagen de un león"/>
+                    <p class="hover-text card-text" aria-hidden="true" >León<br />Lion<br /></p>
                     <audio id="audiolion" class="SoundOnHover" src="resources/sounds/león lion.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="sheep" class="card" tabindex="0">
-                    <img src="./resources/animals/sheep.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de una oveja">Oveja<br />Sheep<br /></p>
+                    <img src="./resources/animals/sheep.png" alt="imagen de una oveja"/>
+                    <p class="hover-text card-text" aria-hidden="true" >Oveja<br />Sheep<br /></p>
                     <audio id="audiooveja" class="SoundOnHover" src="resources/sounds/oveja sheep.aac" preload="auto" autoplay></audio>
                 </div>
                 <div id="elephant" class="card"  tabindex="0">
-                    <img src="./resources/animals/elephant.png"/>
-                    <p class="hover-text card-text" aria-hidden="true" alt="imagen de un elefante">Elefante<br />Elephant<br /></p>
+                    <img src="./resources/animals/elephant.png" alt="imagen de un elefante"/>
+                    <p class="hover-text card-text" aria-hidden="true" >Elefante<br />Elephant<br /></p>
                     <audio id="audioelefante" class="SoundOnHover" src="resources/sounds/elefante elephant .aac" preload="auto" autoplay></audio>
                 </div>
             </div>
