--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
+<head lang="en">
     <meta charset="UTF-8">
     <title>MIAU - Modo práctica</title>
     <style type="text/css">
@@ -13,11 +13,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
-  <div class="mb-3" lang="en">
+<body lang="en">
+  <div class="mb-3">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
-
           <a href="mainmenu.html" alt="Barra de regreso para volver al menú">
               <button style="background: transparent; outline: none; border: 0; width: 60px;"type="button" aria-label="Boton atras"><img src="./resources/arrow.png" alt="Imagen de una flecha de retroceso" style="width: 100%;"></button>
           </a>
@@ -28,7 +27,7 @@
   <div class="mt-5" lang="en">&nbsp;</div>
 
     <!--Inicio de la tabla-->
-    <div class="container text-center contenedorMapa" lang="en">
+    <div class="container text-center contenedorMapa">
       <div class="row mt-5 mt-sm-5">
         <div class="col d-none d-lg-block">&nbsp;</div>
         <div class="col">
