Update study mode

--- a/ClientApp/practiceactivity3.html
+++ b/ClientApp/practiceactivity3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Pr&aacute;tica los números</title>
     <style type="text/css">
         @import url("./styles/generalGameStyles.css");
     </style>
