--- a/ClientApp/practicemode.html
+++ b/ClientApp/practicemode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head lang="en">
+<head>
     <meta charset="UTF-8">
     <title>MIAU - Modo práctica</title>
     <style type="text/css">
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body lang="en">
+<body>
   <div class="mb-3">
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
       <div class="container-fluid">
