fixed h1 and added submit name on keypress enter

--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -44,13 +44,13 @@
                         </div>
                         <div class="card-body">
                             <fieldset id="cuadrito1">
-                                <h3> ¿Cómo te llamas? </h3>
+                                <h1> ¿Cómo te llamas? </h1>
                             </fieldset>
-                            <fieldset id="formnombre">
+                            <form id="formnombre">
                                 <p>Mi nombre es: </p>
-                                <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20" name="nombre" id="nombre" aria-label="Entrada de texto para el nombre"/><br>
+                                <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20" id="nombre" aria-label="Entrada de texto para el nombre"/><br>
                                 <button id="botoncico" type="button" class="btn btn-success" aria-label="Entremos al juego"> ¡Vamos! </button>
-                            </fieldset>
+                            </form>
                             <script src="./js/login.js"></script>
                         </div>
                     </div>
@@ -58,9 +58,9 @@
     
                 <div class="col-md-5 mt-3 mt-md-0">
                     <div class="UmbertoDiag">
-                        <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja" tabindex="1", aria-label="Umberto el gato te da la bienvenida, Introduce tu nombre en la entrada de texto">
+                        <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja" tabindex="1", aria-label="Umberto el gato te da la bienvenida, Introduce tu nombre en la entrada de texto" alt="Introduce tu nombre en la entrada de texto">
                         <div class="float-right">
-                            <img src="resources/Umberto.png" id="Umberto">
+                            <img src="resources/Umberto.png" id="Umberto" alt="Image of Umberto the cat">
                         </div>
                     </div>
                 </div>
