--- a/ClientApp/studyanimals.html
+++ b/ClientApp/studyanimals.html
@@ -17,7 +17,7 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" lang="en"/>
             </button>
         </div>
     </nav>
