--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -28,10 +28,10 @@
             <img src="./resources/solo-gatito.png" class="gato" id="gatitoMenu" alt="logo">
         </div>
         <div class="bubble2">
-            <img src="./resources/bubbles/bubbleMenuBotones.png" aria-label="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función." alt="bocadillo de diálogo del menu" id="bubbleMenu" style="display: block;">
-            <img src="./resources/bubbles/bubbleMenuModoPractica.png" alt="bocadillo de diálogo del modo práctica" aria-label="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora" id="bubblePractica" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" alt="bocadillo de diálogo del modo estudio" aria-label="Aqui podrás aprender nuevas palabras" id="bubbleEstudio" style="display:none">
-            <img src="./resources/bubbles/bubbleMenuTienda.png" alt="bocadillo de diálogo del modo tienda" id="bubbleTienda" aria-label="Por ahora la tienda está deshabilitada" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuBotones.png" aria-label="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función." longdesc="¡Hola! Si pasas sobre los botones te daré más detalles sobre su función." alt="bocadillo de diálogo del menu" id="bubbleMenu" style="display: block;">
+            <img src="./resources/bubbles/bubbleMenuModoPractica.png" alt="bocadillo de diálogo del modo práctica" aria-label="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora" longdesc="En el modo práctica podrás comprobar todo lo que has aprendido hasta ahora" id="bubblePractica" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuModoEstudio.png" alt="bocadillo de diálogo del modo estudio" aria-label="Aqui podrás aprender nuevas palabras" desc="Aqui podrás aprender nuevas palabras" id="bubbleEstudio" style="display:none">
+            <img src="./resources/bubbles/bubbleMenuTienda.png" alt="bocadillo de diálogo del modo tienda" id="bubbleTienda" aria-label="Por ahora la tienda está deshabilitada" longdesc="Por ahora la tienda está deshabilitada" style="display:none">
           </div>
         <div class="bg-image container-fluid" id="background"
             style="background-image: url('./resources/Background.png'); height: 100vh;"
