Corrected Perceptible & Operable problems

--- a/ClientApp/studynumbers.html
+++ b/ClientApp/studynumbers.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>Estudiar números - MIAU</title>
     <style type="text/css">
         @import url("./styles/studyActivities/studyNumbers.css");
     </style>
@@ -17,7 +17,8 @@
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso"
+                    longdesc="Pulsa aquí para volver al modo estudio." style="width: 40px" />
             </button>
         </div>
     </nav>
@@ -32,7 +33,7 @@
         <audio id="audio" class="SoundOnHover" src="https://css-tricks.com/examples/SoundOnHover/audio/beep.mp3"
             preload="auto" autoplay></audio>
         <h1>¡Aprende los n&uacute;meros en ingl&eacute;s!</h1>
-        <h4>Pasa el cursor por los n&uacute;meros para ver sus nombres.</h4>
+        <h2>Pasa el cursor por los n&uacute;meros para ver y escuchar sus nombres.</h2>
         <div id="Numbers" class="mx-auto d-block container-fluid">
             <div class="row">
                 <div id="n1" class="card" tabindex="0">
