fixed buttons from practice mode menu
Los botones tenían mal los títulos

--- a/ClientApp/mainmenu.html
+++ b/ClientApp/mainmenu.html
@@ -18,7 +18,7 @@
         <div class="col-1">
             <button class="btn btn-primary" id="back"
                 onclick="window.location.href = 'index.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="flecha volver atrás" style="width:40px" />
             </button>
         </div>
     </nav>
