added some labels and roles to login

--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU login page</title>
     <style type="text/css">
         @import url("styles/loginStyle.css");
     </style>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm" aria-label="Barra de navegación">
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                onclick="window.location.href = 'index.html';" aria-label="Botón de retorno a la página de inicio">
+                onclick="window.location.href = 'index.html'" aria-label="Botón de retorno a la página de inicio" role="return button">
                 <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px"/>
             </button>
         </div>
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-custom py-3 fixed-top shadow-sm" aria-label="Barra de navegación">
             <div class="col-1">
                 <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
-                    onclick="window.location.href = 'index.html';" aria-label="Botón de retorno a la página de inicio">
+                    onclick="window.location.href = 'index.html'" aria-label="Botón de retorno a la página de inicio" role="return button">
                     <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px"/>
                 </button>
             </div>
@@ -46,9 +46,9 @@
                             <fieldset id="cuadrito1">
                                 <h1> ¿Cómo te llamas? </h1>
                             </fieldset>
-                            <form id="formnombre">
-                                <p>Mi nombre es: </p>
-                                <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20" id="nombre" aria-label="Entrada de texto para el nombre"/><br>
+                            <form id="formnombre" role="name input field">
+                                <p>Introduzca su nombre: </p>
+                                <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20" id="nombre" aria-label="Entrada de texto para el nombre" desc="Entrada de texto para el nombre"/><br>
                                 <button id="botoncico" type="button" class="btn btn-success" aria-label="Entremos al juego"> ¡Vamos! </button>
                             </form>
                             <script src="./js/login.js"></script>
@@ -58,7 +58,7 @@
     
                 <div class="col-md-5 mt-3 mt-md-0">
                     <div class="UmbertoDiag">
-                        <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja" tabindex="1", aria-label="Umberto el gato te da la bienvenida, Introduce tu nombre en la entrada de texto" alt="Introduce tu nombre en la entrada de texto">
+                        <img src="./resources/bubbles/bubbleholaumberto.png" id="burbuja" tabindex="1" aria-label="Umberto el gato te da la bienvenida, Introduce tu nombre en la entrada de texto" alt="Introduce tu nombre en la entrada de texto">
                         <div class="float-right">
                             <img src="resources/Umberto.png" id="Umberto" alt="Image of Umberto the cat">
                         </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-    
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
