--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
                             <img id="logoCard" src="resources/LogoMorado.png" alt="MIAU logo" class="w-100"/>
                         </div>
                         <div class="card-body">
-                            <fieldset id="cuadrito1">
+                            <fieldset id="cuadrito1" aria-label="Texto que pregunta cómo te llamas">
                                 <h1> ¿Cómo te llamas? </h1>
                             </fieldset>
                             <form id="formnombre" role="name input field">
