minor changes in labels and tags

--- a/ClientApp/login.html
+++ b/ClientApp/login.html
@@ -46,7 +46,7 @@
                             <fieldset id="cuadrito1" aria-label="Texto que pregunta cómo te llamas">
                                 <h1> ¿Cómo te llamas? </h1>
                             </fieldset>
-                            <form id="formnombre" role="form" desc="Entrada de texto para el nombre">
+                            <form id="formnombre" role="form">
                                 <p>Introduzca su nombre: </p>
                                 <input class="form-control" type="text" placeholder="nombre" maxlength="20" size="20" id="nombre" aria-label="Entrada de texto para el nombre"/><br>
                                 <button id="botoncico" type="button" class="btn btn-success" aria-label="Entremos al juego"> ¡Vamos! </button>
