--- a/ClientApp/practiceactivity2.html
+++ b/ClientApp/practiceactivity2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU practice activity animals</title>
     <style type="text/css">
         @import url("./styles/generalGameStyles.css");
     </style>
