Accesibilidad estudio + juego colores

--- a/ClientApp/studycolors.html
+++ b/ClientApp/studycolors.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Modo estudio colores</title>
     <style type="text/css">
         @import url("./styles/studyActivities/studyColors.css");
     </style>
@@ -12,24 +12,24 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body style="background-color: rgb(243, 229, 167);">
+<body>
     <nav class="navbar navbar-custom py-3 fixed-top shadow-sm">
         <div class="col-1">
             <button style="background: transparent; outline: none; border: 0; width: 60px;" class="btn btn-primary"
                 onclick="window.location.href = 'studymode.html';">
-                <img src="resources/arrow.png" alt="ReturnArrow" style="width:40px" />
+                <img src="resources/arrow.png" alt="Flecha de retroceso" longdesc="botón para volver al menún del modo estudio" style="width:40px" />
             </button>
         </div>
     </nav>
 
     <div id="pamostrarcolors" class="card mx-auto justify-content-center align-items-center"
         style="display: flex; justify-content:center;">
-        <button class="paramostrarcolors" onclick="mostrarContenidoColor()">¡Vamos a aprender! <br> Pulsa aquí para
+        <button class="paramostrarcolors" onclick="mostrarContenidoColor()">¡Vamos a aprender! <br> Pulsa aqu&iacute; para
             empezar </button>
     </div>
 
     <div id="contenidocolors" style="display:none;" tabindex="0">
-        <h1>¡Aprende los colores en inglés!</h1>
+        <h1>¡Aprende los colores en ingl&eacute;s!</h1>
         <h4>Pasa el cursor por los colores para verlos.</h4>
         <div id="PaletaDiv" class="mx-auto d-block" tabindex="0">
             <div class="green" tabindex="0">
@@ -50,7 +50,7 @@
         </div>
 
         <button id="changeColorsButton" class="mx-auto d-block">
-            <label>¡M&aacute;s colores!</label>
+            ¡M&aacute;s colores!
         </button>
     </div>
 
