--- a/ClientApp/practiceactivity.html
+++ b/ClientApp/practiceactivity.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>MIAU</title>
+    <title>MIAU - Modo pr&acute;ctica colores</title>
     <style type="text/css">
         @import url("./styles/generalGameStyles.css");
     </style>
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
